<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryDark" >

    <LinearLayout
        android:id="@+id/osn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/recipe_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?colorPrimary"
            android:contentDescription="@string/recipe_photo"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:text="@string/new_recipe"
                android:textColor="?colorOnPrimary"
                android:textSize="24sp" />
            <Spinner
                android:id="@+id/recipe_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?colorPrimaryVariant"
                android:entries="@array/recipeTypes"
                android:padding="8dp"
                android:hint="@string/recipe_type"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:nextFocusDown="@id/new_recipe_portions_num"
                android:maxLines="1"
                android:background="?colorPrimaryVariant"
                android:hint="@string/recipe_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginEnd="16dp"
                android:text="@string/portions"
                android:textColor="?colorOnPrimary"
                android:textSize="24sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_recipe_portions_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?colorOnPrimary"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:nextFocusDown="@id/new_recipe_method"
                    android:maxLines="1"
                    android:background="?colorPrimaryVariant"
                    android:hint="@string/count"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/add_recipe_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:backgroundTint="?colorPrimaryVariant"
            android:text="@string/select_photo"
            android:textColor="?colorOnPrimary" />

        <LinearLayout
            android:id="@+id/ingr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textColor="?colorOnPrimary"
                android:text="@string/ingredients"
                android:textSize="24sp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_recipe_ingredient"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/add_recipe_ingredients"
                app:backgroundTint="?colorPrimaryVariant"
                app:tint="?colorOnPrimary"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_baseline_add_24" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/add_recipe_ingredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/recipe_ingredient_item" />
        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_recipe_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?colorPrimaryVariant"
                android:hint="@string/cooking_method" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/new_recipe_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:backgroundTint="?colorOnPrimary"
            android:text="@string/save"
            android:textColor="?colorPrimaryVariant" />

    </LinearLayout>
</ScrollView>