<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?colorPrimaryDark">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/settings"
        android:textColor="?colorOnPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="32dp"
        />

    <TextView
        android:id="@+id/headerBreakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/breakfast"
        android:textColor="?colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@id/breakInput"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/breakInput"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/breakfast_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimaryVariant"
            android:hint="@string/hour" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/headerLanch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/lunch_hour"
        android:textColor="?colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@id/lunchInput"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lunchInput"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/breakInput"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lunch_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimaryVariant"
            android:hint="@string/hour" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/headerDinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/dinner_hour"
        android:textColor="?colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@id/dinnerInput"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dinnerInput"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/lunchInput"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dinner_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimaryVariant"
            android:hint="@string/hour" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/headerTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/default_theme"
        android:textColor="?colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="@id/defaultThemeSpinner"
        app:layout_constraintBottom_toBottomOf="@id/defaultThemeSpinner"

        />

    <Spinner
        android:id="@+id/defaultThemeSpinner"
        android:layout_width="wrap_content"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:background="?colorPrimaryVariant"
        android:entries="@array/themesArray"
        android:paddingVertical="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch1"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_themes_for_eating"
        android:layout_margin="16dp"
        android:checked="true"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/dinnerInput"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/save_settings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/save"
        android:backgroundTint="?colorOnPrimary"
        android:textColor="?colorPrimaryVariant"

        app:layout_constraintTop_toBottomOf="@id/defaultThemeSpinner"
        android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>